# mecs

./: .gcc-flags.json  .gcc-flags.json~  .gitignore  .glfw.supp  .valgrindrc  .valgrindrc~  CMakeLists.txt  LICENSE  Makefile  Makefile~  README.md  compile_commands.json  conanfile.txt  doxy_config  doxy_config~  shell.nix
doc/: mainpage.h~  mainpage.md
doc/html/: annotated.html  base_8h.html  base_8h_source.html  classes.html  components_8h_source.html  core_8h_source.html  creatre_8h_source.html  creature_8h.html  creature_8h_source.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_2052808828190f934b76e979ee65af8a.html  dir_337cf9df385d72afab44408bfccbf9fb.html  dir_3a0e3b82484872d02bd65d6789aeef6b.html  dir_3c04bc290434a2bfff240c0777e37105.html  dir_3c4c7c1a85608ccd561c026bec818e51.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_6cb2902bc1227614e4c9989c76184c7f.html  dir_785864cc26905874137f414c895fbccf.html  dir_7f643b58e2241519524527f42d96aecd.html  dir_a7f531b1c37460085cedd304cb8df01d.html  dir_c68d91cfdadf1af4c2d39bbcf928e432.html  dir_c743704d4a27141d26350e4960f85eaa.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d66e8d5a7776834ccee339fd5fd3e729.html  dir_e68e8157741866f444e17edd764ebbae.html  enemy__template_8h_source.html  engine_8h.html  engine_8h_source.html  entity_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_enum.html  globals_func.html  globals_type.html  group__Base.html  group__Components.html  group__Core.html  group__Query.html  (+42 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  enums_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  (+21 more)
doc/latex/: annotated.tex  base_8h.tex  creature_8h.tex  engine_8h.tex  files.tex  group__Base.tex  group__Components.tex  group__Core.tex  group__Query.tex  group__State.tex  group__Template.tex  index.tex  info_8h.tex  modules.tex  query_8h.tex  refman.tex  state_8h.tex  structCreature.tex  structEntityList.tex  structInfo.tex  structPosition.tex  structTemplate.tex  structTransform.tex  structvec2f.tex  structvec2i.tex  structvec3f.tex  structvec3i.tex  transform_8h.tex  vecmath_8h.tex
include/: core.h~  engine.h  engine.hpp  engine.h~  test_app.hpp
include/components/: actuator.h  actuator.hpp  agent.h  agent.hpp  attachment.h  attachment.hpp  camera.h  camera.hpp  components.h  components.hpp  components.h~  creatre.h~  creature.h  creature.h~  info.h  info.hpp  info.h~  model.h  model.hpp  rigidbody.h  rigidbody.hpp  sensor.h  sensor.hpp  transform.h  transform.h~
include/ecs/: component.hpp  ecs.hpp  entity.hpp  resources.hpp  system.hpp  world.hpp
include/engine/: core.h  core.hpp  core.h~  engine.h~  entity.h~  graphics.h  graphics.hpp  graphics.h~  math.h  math.hpp  query.h~  resources.h  resources.hpp  state.h~  structures.h  template.h~
include/graphics/: camera.hpp  graphics.hpp  mesh.hpp  model.hpp  render_system.hpp  texture.hpp
include/math/: diagonal_matrix.hpp  math.hpp  sparse_matrix.hpp  vecmath.hpp
include/physics/: constraint.hpp  physics.hpp  rigidbody.hpp  system.hpp
include/systems/: physics.h  physics.hpp  systems.h  systems.hpp  systems.h~  utils.h  utils.hpp  utils.h~
include/templates/: enemy_template.h~  templates.h  templates.hpp  templates.h~
include/test_app/: constructors.hpp
libs/: CMakeLists.txt
libs/src/: glad.c
resources/meshes/: cube.ovlo  cube.ovlo~
resources/shaders/: #basic.vs#  .#basic.vs  basic.frag  basic.fs  basic.vert  basic.vs  light.fs  light.fs~  light.vs  light.vs~
src/: #main.c#  CMakeLists.txt  enemy_system.c~  main.c  main.cpp  main.c~
src/components/: actuator.c  actuator.cpp  agent.c  agent.cpp  attachment.c  attachment.cpp  camera.c  camera.cpp  collider.c  creature.c  creature.c~  info.c  info.cpp  info.c~  model.c  model.cpp  rigidbody.c  rigidbody.cpp  sensor.c  sensor.cpp  transform.c  transform.c~
src/constructors/: enemy.cpp  player.cpp
src/ecs/: CMakeLists.txt  entity.cpp  resources.cpp  world.cpp
src/engine/: CMakeLists.txt  engine.c~  main.c~  query.c~  shader.c~  template.c~  templates.h~
src/engine/core/: base.c  base.c~  component.cpp  entity.cpp  query.c  query.cpp  query.c~  resources.c  resources.cpp  template.c  template.c~  types.c  types.cpp  world.cpp
src/engine/graphics/: mesh.c  mesh.c~  shader.c  shader.cpp  shader.c~  window.c  window.cpp  window.c~
src/engine/math/: matmath.c  matmath.cpp  matmath.c~  vecmath.c  vecmath.cpp  vecmath.c~
src/engine/resources/: mesh.c  mesh.cpp  texture.c  texture.cpp
src/engine/structures/: gen_dict.c  gen_list.c  int_list.c
src/graphics/: CMakeLists.txt  camera.cpp  model.cpp  render_system.cpp  shader.cpp  window.cpp
src/graphics/resources/: mesh.cpp
src/physics/: CMakeLists.txt  collision_mesh.cpp  physics_system.cpp  rigidbody.cpp
src/physics/collision/: aabb_test.cpp  gjk.cpp  sat_test.cpp
src/physics/dynamics/: constraint_solver.cpp
src/systems/: ai_system.c  ai_system.cpp  enemy_system.c  enemy_system.cpp  enemy_system.c~  input_system.c  input_system.cpp  input_system.c~  physics_system.c  physics_system.cpp  render_system.c  render_system.cpp  render_system.c~  utils.c  utils.cpp  utils.c~
src/systems/physics/: sat_test.c  sat_test.cpp  sat_test.c~
src/templates/: enemy_template.c  enemy_template.cpp  enemy_template.c~  floor_template.c  floor_template.cpp  player_template.c  player_template.cpp  player_template.c~
src/test_app/: CMakeLists.txt  main.cpp
src/test_app/components/: input.cpp
src/test_app/constructors/: enemy.cpp  floor.cpp  player.cpp
src/test_app/systems/: input_system.cpp  utils.cpp
test/: test.c  test.c~  test.h~  test_math.c~  tester.h  tester.h~
test/components/: a.out
test/engine/: test.c~  test_engine.c  test_engine.c~
(+52 files in other folders)
