add_library(engine core/base.c
                   core/query.c
                   core/resources.c
                   core/types.c
                   graphics/shader.c
                   graphics/window.c
                   math/matmath.c
                   math/vecmath.c
                   resources/texture.c
                   resources/mesh.c
                   structures/int_list.c
                   structures/gen_dict.c
                   structures/gen_list.c)
