add_library(engine core/world.cpp
                   core/entity.cpp
                   core/component.cpp
                   core/resources.cpp
                   core/types.cpp
                   graphics/shader.cpp
                   graphics/window.cpp
                   math/matmath.cpp
                   math/vecmath.cpp
                   resources/texture.cpp
                   resources/mesh.cpp)
